--- a/.github/workflows/syntax.yml
+++ b/.github/workflows/syntax.yml
@@ -4,9 +4,9 @@
 name: Test/check syntax
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   build:
